--- a/views/create-shorturl.ejs
+++ b/views/create-shorturl.ejs
@@ -680,6 +680,7 @@
         <script>
          
 
+         console.log("hello");
             function myFunction41(dump) {
                 let new41 = $(dump).find('.myTooltip');
                 let copyText = $(dump).attr("id");
